--- a/scanner/config_app_privacy.html
+++ b/scanner/config_app_privacy.html
@@ -45,18 +45,18 @@ style='font-size:16.0pt;font-family:"Times New Roman",serif;color:black'>Process
 of personal data</span></b></p>
 
 <p class=MsoNormal style='text-align:justify'><span style='font-size:14.0pt;
-font-family:"Times New Roman",serif;color:black'>The users of the TEOLIS PAY
+font-family:"Times New Roman",serif;color:black'>The users of the Mavor Sanner Config
 app grant their consent for the processing of their</span><span
 style='font-size:21.0pt;font-family:"Times New Roman",serif;color:black'>&nbsp;</span><span
 style='font-size:14.0pt;font-family:"Times New Roman",serif;color:black'>personal
-data during the installation of the TEOLIS PAY app.</span><span
+data during the installation of the Mavor Sanner Config app.</span><span
 style='font-size:21.0pt;font-family:"Times New Roman",serif;color:black'>&nbsp;</span><span
 style='font-size:14.0pt;font-family:"Times New Roman",serif;color:black'>Your
-personal data is collected and processed by TEOLIS PAY . TEOLIS PAY app only
+personal data is collected and processed by Mavor Sanner Config . Mavor Sanner Config app only
 collects and processes the personal data</span><span style='font-size:21.0pt;
 font-family:"Times New Roman",serif;color:black'>&nbsp;</span><span
 style='font-size:14.0pt;font-family:"Times New Roman",serif;color:black'>submitted
-by the users in the course of installation and use of the TEOLIS PAY</span><span
+by the users in the course of installation and use of the Mavor Sanner Config</span><span
 style='font-size:21.0pt;font-family:"Times New Roman",serif;color:black'>&nbsp;</span><span
 style='font-size:14.0pt;font-family:"Times New Roman",serif;color:black'>app.</span></p>
 
@@ -78,14 +78,14 @@ information of the app user.</span></p>
 <p class=MsoNormal style='text-align:justify'><span style='font-size:17.0pt;
 font-family:"Times New Roman",serif;color:black'>&nbsp;</span><span
 style='font-size:14.0pt;font-family:"Times New Roman",serif;color:black'>Identification
-data of the device on which the TEOLIS PAY app has been</span><span
+data of the device on which the Mavor Sanner Config app has been</span><span
 style='font-size:21.0pt;font-family:"Times New Roman",serif;color:black'>&nbsp;</span><span
 style='font-size:14.0pt;font-family:"Times New Roman",serif;color:black'>installed.</span></p>
 
 <p class=MsoNormal style='text-align:justify'><span style='font-size:17.0pt;
 font-family:"Times New Roman",serif;color:black'>&nbsp;</span><span
 style='font-size:14.0pt;font-family:"Times New Roman",serif;color:black'>Cookies
-of the teolis.net website may save the website user's</span><span
+of the mavor-it.com website may save the website user's</span><span
 style='font-size:21.0pt;font-family:"Times New Roman",serif;color:black'>&nbsp;</span><span
 style='font-size:14.0pt;font-family:"Times New Roman",serif;color:black'>geographic
 location data and other available web browsing data.</span></p>
@@ -99,7 +99,7 @@ style='font-size:15.0pt;font-family:"Times New Roman",serif;color:black'>data</s
 <p class=MsoNormal style='text-align:justify'><span style='font-size:17.0pt;
 font-family:"Times New Roman",serif;color:black'>&nbsp;</span><span
 style='font-size:14.0pt;font-family:"Times New Roman",serif;color:black'>We use
-contact details to notify you of updates to the TEOLIS PAY app.</span></p>
+contact details to notify you of updates to the Mavor Sanner Config app.</span></p>
 
 <p class=MsoNormal style='text-align:justify'><span style='font-size:17.0pt;
 font-family:"Times New Roman",serif;color:black'>&nbsp;</span><span
@@ -124,10 +124,10 @@ style='font-size:14.0pt;font-family:"Times New Roman",serif;color:black'>&nbsp;W
 collect data on the names, telephone numbers and/or e-mail</span><span
 style='font-size:21.0pt;font-family:"Times New Roman",serif;color:black'>&nbsp;</span><span
 style='font-size:14.0pt;font-family:"Times New Roman",serif;color:black'>addresses
-of TEOLIS PAY app users during the process of the installation</span><span
+of Mavor Sanner Config app users during the process of the installation</span><span
 style='font-size:21.0pt;font-family:"Times New Roman",serif;color:black'>&nbsp;</span><span
 style='font-size:14.0pt;font-family:"Times New Roman",serif;color:black'>of the
-TEOLIS PAY app.</span></p>
+Mavor Sanner Config app.</span></p>
 
 <p class=MsoNormal style='margin-top:2.0pt;line-height:16.05pt'><b><span
 style='font-size:15.0pt;font-family:"Times New Roman",serif;color:black'>4.
@@ -158,7 +158,7 @@ purposes to business partners or affiliates;</span></p>
 font-family:"Times New Roman",serif;color:black'>Any collection and processing
 of personal data by local</span><span style='font-size:21.0pt;font-family:"Times New Roman",serif;
 color:black'>&nbsp;</span><span style='font-size:14.0pt;font-family:"Times New Roman",serif;
-color:black'>TEOLIS PAY service providers shall occur under the same conditions
+color:black'>Mavor Sanner Config service providers shall occur under the same conditions
 as</span><span style='font-size:21.0pt;font-family:"Times New Roman",serif;
 color:black'>&nbsp;</span><span style='font-size:14.0pt;font-family:"Times New Roman",serif;
 color:black'>established in this privacy policy.</span></p>
@@ -184,13 +184,13 @@ Security and deletion of data</span></b></p>
 <p class=MsoNormal style='text-align:justify'><span style='font-size:17.0pt;
 font-family:"Times New Roman",serif;color:black'>&nbsp;</span><span
 style='font-size:14.0pt;font-family:"Times New Roman",serif;color:black'>&nbsp;Any
-personal data collected in the course of providing the TEOLIS PAY</span><span
+personal data collected in the course of providing the Mavor Sanner Config</span><span
 style='font-size:21.0pt;font-family:"Times New Roman",serif;color:black'>&nbsp;</span><span
 style='font-size:14.0pt;font-family:"Times New Roman",serif;color:black'>service
 is transferred to and stored in the data centers located in the</span><span
 style='font-size:21.0pt;font-family:"Times New Roman",serif;color:black'>&nbsp;</span><span
 style='font-size:14.0pt;font-family:"Times New Roman",serif;color:black'>territory
-of USA. Only authorized employees of TEOLIS PAY and local</span><span
+of USA. Only authorized employees of Mavor Sanner Config and local</span><span
 style='font-size:21.0pt;font-family:"Times New Roman",serif;color:black'>&nbsp;</span><span
 style='font-size:14.0pt;font-family:"Times New Roman",serif;color:black'>service
 providers have access to the personal data and they may</span><span
@@ -199,7 +199,7 @@ style='font-size:14.0pt;font-family:"Times New Roman",serif;color:black'>access
 the data only for the purpose of resolving issues associated</span><span
 style='font-size:21.0pt;font-family:"Times New Roman",serif;color:black'>&nbsp;</span><span
 style='font-size:14.0pt;font-family:"Times New Roman",serif;color:black'>with
-the use of the TEOLIS PAY app.</span></p>
+the use of the Mavor Sanner Config app.</span></p>
 
 <p class=MsoNormal style='text-align:justify'><span style='font-size:17.0pt;
 font-family:"Times New Roman",serif;color:black'>&nbsp;</span><span
@@ -233,7 +233,7 @@ style='font-size:14.0pt;font-family:"Times New Roman",serif;color:black'>feature
 <p class=MsoNormal style='text-align:justify'><span style='font-size:17.0pt;
 font-family:"Times New Roman",serif;color:black'>&nbsp;</span><span
 style='font-size:14.0pt;font-family:"Times New Roman",serif;color:black'>&nbsp;Please
-note that uninstalling the TEOLIS PAY app from your device does</span><span
+note that uninstalling the Mavor Sanner Config app from your device does</span><span
 style='font-size:21.0pt;font-family:"Times New Roman",serif;color:black'>&nbsp;</span><span
 style='font-size:14.0pt;font-family:"Times New Roman",serif;color:black'>not
 terminate your account and therefore does not delete your</span><span
@@ -251,7 +251,7 @@ style='font-size:14.0pt;font-family:"Times New Roman",serif;color:black'>delete
 personal data is only possible if we delete your account. As a</span><span
 style='font-size:21.0pt;font-family:"Times New Roman",serif;color:black'>&nbsp;</span><span
 style='font-size:14.0pt;font-family:"Times New Roman",serif;color:black'>result,
-you will no longer be able to use TEOLIS PAY app services under your</span><span
+you will no longer be able to use Mavor Sanner Config app services under your</span><span
 style='font-size:21.0pt;font-family:"Times New Roman",serif;color:black'>&nbsp;</span><span
 style='font-size:14.0pt;font-family:"Times New Roman",serif;color:black'>existing
 account. After the deletion, the personal data will be</span><span
@@ -262,7 +262,7 @@ and used for analytics only.</span></p>
 <p class=MsoNormal style='text-align:justify'><span style='font-size:17.0pt;
 font-family:"Times New Roman",serif;color:black'>&nbsp;</span><span
 style='font-size:14.0pt;font-family:"Times New Roman",serif;color:black'>&nbsp;If
-you presume that we (or any other TEOLIS PAY entity processing your</span><span
+you presume that we (or any other Mavor Sanner Config entity processing your</span><span
 style='font-size:21.0pt;font-family:"Times New Roman",serif;color:black'>&nbsp;</span><span
 style='font-size:14.0pt;font-family:"Times New Roman",serif;color:black'>personal
 data) carry such processing in contradiction with your</span><span
@@ -282,7 +282,7 @@ explanation;</span></p>
 
 <p class=MsoNormal style='text-align:justify'><span style='font-size:14.0pt;
 font-family:"Times New Roman",serif;color:black'>b) require us (and/or any
-other TEOLIS PAY entity processing your</span><span style='font-size:21.0pt;
+other Mavor Sanner Config entity processing your</span><span style='font-size:21.0pt;
 font-family:"Times New Roman",serif;color:black'>&nbsp;</span><span
 style='font-size:14.0pt;font-family:"Times New Roman",serif;color:black'>personal
 data) to remedy the arisen state of affairs (in particular</span><span
@@ -318,7 +318,7 @@ style='font-size:21.0pt;font-family:"Times New Roman",serif;color:black'>&nbsp;<
 style='font-size:14.0pt;font-family:"Times New Roman",serif;color:black'>section
 of </span><span style='font-size:14.0pt;font-family:"Times New Roman",serif;
 color:black'> </span><span style='font-size:14.0pt;font-family:"Times New Roman",serif;
-color:black'>TEOLIS PAY mobile App.</span></p>
+color:black'>Mavor Sanner Config mobile App.</span></p>
 
 <p class=MsoNormal style='margin-top:12.0pt;line-height:17.1pt'><b><span
 style='font-size:16.0pt;font-family:"Times New Roman",serif;color:black'>Changes
