--- a/scanner/config_app_privacy.html
+++ b/scanner/config_app_privacy.html
@@ -203,8 +203,7 @@ the use of the Mavor Sanner Config app.</span></p>
 
 <p class=MsoNormal style='text-align:justify'><span style='font-size:17.0pt;
 font-family:"Times New Roman",serif;color:black'>&nbsp;</span><span
-style='font-size:14.0pt;font-family:"Times New Roman",serif;color:black'>&nbsp;TEOLIS
-PAY takes all necessary precautions to ensure the confidentiality</span><span
+style='font-size:14.0pt;font-family:"Times New Roman",serif;color:black'>&nbsp;Mavor Scanner Config App takes all necessary precautions to ensure the confidentiality</span><span
 style='font-size:21.0pt;font-family:"Times New Roman",serif;color:black'>&nbsp;</span><span
 style='font-size:14.0pt;font-family:"Times New Roman",serif;color:black'>and
 security of the personal data processed and to prevent</span><span
@@ -241,8 +240,7 @@ style='font-size:21.0pt;font-family:"Times New Roman",serif;color:black'>&nbsp;<
 style='font-size:14.0pt;font-family:"Times New Roman",serif;color:black'>personal
 data. If you wish to delete your personal data collected by</span><span
 style='font-size:21.0pt;font-family:"Times New Roman",serif;color:black'>&nbsp;</span><span
-style='font-size:14.0pt;font-family:"Times New Roman",serif;color:black'>TEOLIS
-PAY, please send a written request to close your account and</span><span
+style='font-size:14.0pt;font-family:"Times New Roman",serif;color:black'>Mavor Scanner Config App, please send a written request to close your account and</span><span
 style='font-size:21.0pt;font-family:"Times New Roman",serif;color:black'>&nbsp;</span><span
 style='font-size:14.0pt;font-family:"Times New Roman",serif;color:black'>delete
 the personal data by e-mail. Keep in mind that the request to</span><span
@@ -274,8 +272,7 @@ style='font-size:14.0pt;font-family:"Times New Roman",serif;color:black'>persona
 data is inaccurate, you may:</span></p>
 
 <p class=MsoNormal style='text-align:justify'><span style='font-size:14.0pt;
-font-family:"Times New Roman",serif;color:black'>a) ask us (and/or any other TEOLIS
-PAY entity processing your</span><span style='font-size:21.0pt;font-family:
+font-family:"Times New Roman",serif;color:black'>a) ask us (and/or any other Mavor Scanner Config App entity processing your</span><span style='font-size:21.0pt;font-family:
 "Times New Roman",serif;color:black'>&nbsp;</span><span style='font-size:14.0pt;
 font-family:"Times New Roman",serif;color:black'>personal data) for an
 explanation;</span></p>
